# forro-festivals

./: .gitignore  LICENSE  README.md  TODO.md  app.py  pyproject.toml
.github/workflows/: reload-forro-festivals.yml
scripts/: reload-app.sh
src/forro_festivals/: __init__.py  app.py  auth.py  config.py
src/forro_festivals/db/: __init__.py  db.py  db_api.py
src/forro_festivals/misc/: logger.py  notification.py  passwords.py
src/forro_festivals/models/: __init__.py  base.py  event.py  suggestion.py  user.py
src/forro_festivals/routes/: __init__.py  add_festival.py  admin.py  auth.py  info.py  update_festival.py
src/forro_festivals/scripts/: __main__.py  build_pages.py  cli_utils.py  create_festivals_html.py  create_impressum.py  create_impressum_html.py  create_legal_notice_html.py  daily_build.py  db.py  db_api.py  event.py  initialise.py  logger.py  notification.py  query_forro_app.py  reload-all.sh  reload-app.sh  reload_app.py  render_html_pages.py  suggestion.py  test_task.sh  update_db_with_forro_app.py  user.py
src/forro_festivals/static/: site.webmanifest  styles.css
src/forro_festivals/templates/: about.html  add-festival.html  base.html  dashboard.html  festivals.html  impressum.html  legal-notice.html  login.html  update-festival.html  update-next-lot.html
tests/: test_db.py  test_event.py
