[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forro-festivals"
version = "0.1.0"
description = "Providing an overview over Forró Festivals at forro-festivals.com"
authors = [
    { name = "Ferdinand Eiteneuer" }
]
license = { file = "LICENSE" }
readme = "README.md"

dependencies = [
    "Flask>=3.1.0",
    "Flask-Login>=0.6.3",
    "pydantic",
    "pycountry",
    "argon2-cffi",
]

keywords = ["flask", "web", "application"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10,<3.11"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["forro_festivals"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
ff = "forro_festivals.scripts.__main__:ff"  # Define the entry point: 'ff' command maps to 'ff' function in ff.py
